--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"bugs": {
 		"url": "https://github.com/Gawdl3y/discord-graf/issues"
-    },
+	},
 	"keywords": [
 		"discord",
 		"bot"
@@ -20,7 +20,7 @@
 	},
 	"main": "lib/index",
 	"dependencies": {
-		"discord.js": "^11.0.0",
+		"discord.js": "^12.5.3",
 		"winston": "^2.3.0",
 		"common-tags": "^1.4.0",
 		"node-localstorage": "^1.3.0",
@@ -31,7 +31,7 @@
 		"request-promise-native": "^1.0.3"
 	},
 	"devDependencies": {
-		"gulp": "gulpjs/gulp#4.0",
+		"gulp": "^4.0.0",
 		"gulp-babel": "^6.1.0",
 		"gulp-sourcemaps": "^2.4.0",
 		"gulp-exec": "^2.1.0",
@@ -48,7 +48,11 @@
 		"node": ">=6.0.0"
 	},
 	"babel": {
-		"presets": ["es2015-node6"],
-		"plugins": ["fast-async"]
+		"presets": [
+			"es2015-node6"
+		],
+		"plugins": [
+			"fast-async"
+		]
 	}
 }
