add a prepare script ig

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"bot"
 	],
 	"scripts": {
-		"build": "gulp"
+		"build": "gulp",
+		"prepare": "gulp"
 	},
 	"main": "lib/index",
 	"dependencies": {
